--- a/Pulse/app/src/main/res/layout/activity_main.xml
+++ b/Pulse/app/src/main/res/layout/activity_main.xml
@@ -14,15 +14,12 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/message"
+        <org.opencv.android.JavaCameraView
+            android:id="@+id/camera_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/activity_vertical_margin"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/title_home" />
+            android:layout_height="match_parent"
+            android:visibility="invisible"
+            app:show_fps="true" />
 
     </FrameLayout>
 
