--- a/Pulse/app/src/main/res/menu/navigation.xml
+++ b/Pulse/app/src/main/res/menu/navigation.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/ic_camera_black_24dp"
+        android:title="@string/title_camera" />
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:icon="@drawable/ic_show_chart_black_24dp"
+        android:title="@string/title_graph" />
 
     <item
         android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:icon="@drawable/ic_insert_chart_black_24dp"
+        android:title="@string/title_stat" />
 
 </menu>
