--- a/Pulse/app/src/main/res/layout/fragment_camera.xml
+++ b/Pulse/app/src/main/res/layout/fragment_camera.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <org.opencv.android.JavaCameraView
-        android:id="@+id/camera_view"
+        android:id="@+id/camera_camera_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/brightness_mean"
