--- a/Pulse/app/src/main/res/layout/fragment_statistics.xml
+++ b/Pulse/app/src/main/res/layout/fragment_statistics.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <org.opencv.android.JavaCameraView
-        android:id="@+id/graph_camera_view"
+        android:id="@+id/statistics_camera_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:visibility="gone" />
