--- a/Pulse/app/src/main/res/layout/fragment_graph.xml
+++ b/Pulse/app/src/main/res/layout/fragment_graph.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
     <org.opencv.android.JavaCameraView
         android:id="@+id/graph_camera_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
-</LinearLayout>
+        android:layout_height="wrap_content" />
+    <com.androidplot.xy.XYPlot
+        android:id="@+id/graph_plot"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        style="@style/APDefacto" />
+</RelativeLayout>
