Added bpm to Graph Fragment

--- a/Pulse/app/src/main/res/layout/fragment_graph.xml
+++ b/Pulse/app/src/main/res/layout/fragment_graph.xml
@@ -11,5 +11,21 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
+        android:layout_above="@+id/bpm_num_textView"
         style="@style/APDefacto" />
+    <TextView
+        android:id="@id/bpm_num_textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:textColor="@color/colorFontPrimaryDark"
+        android:textSize="100sp"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toEndOf="@id/bpm_num_textView"
+        android:layout_alignBaseline="@id/bpm_num_textView"
+        android:text="@string/text_bpm" />
 </RelativeLayout>
