--- a/Pulse/app/src/main/res/layout/activity_calibrate.xml
+++ b/Pulse/app/src/main/res/layout/activity_calibrate.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
+    android:id="@+id/calibrate_fragment"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="joeltio.pulse.CalibrateActivity">
-    <fragment
-        android:id="@+id/calibrate_fragment"
-        android:name="joeltio.pulse.Fragments.CalibrateIntroFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</LinearLayout>
+</FrameLayout>
