--- a/Pulse/app/src/main/res/menu/navigation.xml
+++ b/Pulse/app/src/main/res/menu/navigation.xml
@@ -12,8 +12,8 @@
         android:title="@string/title_graph" />
 
     <item
-        android:id="@+id/navigation_statistics"
+        android:id="@+id/navigation_calibrate"
         android:icon="@drawable/ic_insert_chart_black_24dp"
-        android:title="@string/title_stat" />
+        android:title="@string/title_calibrate" />
 
 </menu>
