--- a/Pulse/app/src/main/res/values/colors.xml
+++ b/Pulse/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorCalibrateSuccessBar">#00FF00</color>
     <color name="colorCalibratePrimary">#2196F3</color>
     <color name="colorCalibrateSecondary">#1976D2</color>
+
+    <color name="colorGraphLine">#ef6c00</color>
 </resources>
