--- a/Pulse/app/src/main/res/layout/fragment_graph.xml
+++ b/Pulse/app/src/main/res/layout/fragment_graph.xml
@@ -38,6 +38,7 @@
     <com.androidplot.xy.XYPlot
         android:id="@+id/graph_plot"
         android:layout_height="match_parent"
+        android:layout_width="165dp"
         android:layout_below="@id/heart_layout"
         android:layout_centerHorizontal="true"
         style="@style/APDefacto" />
